Fixed issue with spacing between weather alerts and cards

--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,10 @@ body {
   max-width: 100%;
 }
 
+.weather-alert-container {
+  margin-bottom: -.75em;
+}
+
 .weather-alert {
   margin-top: 1em;
   margin-bottom: 0rem;
